--- a/src/hello.html
+++ b/src/hello.html
@@ -8,6 +8,6 @@
     <script src="hello.js"></script>
 </head>
 <body>
-    <h1>Hello world</h1>
+    <h1>Hello world from HTML</h1>
 </body>
 </html>
